@startuml

class IHotDrink{
    + virtual ~HotDrink() = default
    + virtual void prepare(int volume) = 0
}

class Tea{
    + void prepare(int volume) override
}

class Coffee{
    + void prepare(int volume) override
}

class DrinkWithVolumeFactory{
    - std::map<std::string, std::function<std::shared_ptr<IHotDrink>()>> factorys_
    + DrinkWithVolumeFactory()
    + std::optional<std::shared_ptr<IHotDrink>> MakeDrink(std::string drinkName)
}

IHotDrink <|--  Tea
IHotDrink <|--  Coffee

DrinkWithVolumeFactory o-- IHotDrink

@enduml